# dapagliflozin-model

./: .gitignore  .zenodo.json  Dockerfile  Dockerfile.md  README.md  dapagliflozin_model.omex  dapagliflozin_model_fair.xlsx  pyproject.toml
.github/workflows/: docker.yml  python.yml
models/: dapagliflozin_body.md  dapagliflozin_body.xml  dapagliflozin_body_flat.md  dapagliflozin_body_flat.xml  dapagliflozin_intestine.md  dapagliflozin_intestine.xml  dapagliflozin_kidney.md  dapagliflozin_kidney.xml  dapagliflozin_liver.md  dapagliflozin_liver.xml  dapagliflozin_model.omex
release-notes/: 0.9.0.md  0.9.1.md  0.9.2.md  0.9.3.md  0.9.4.md  0.9.5.md  0.9.6.md  0.9.7.md  0.9.8.md  0.9.9.md
sensitivity/: parameter_local_sensitivity_0.01.tsv
simulations/: index.html
simulations/Boulton2013/: Boulton2013.html  Boulton2013.json  Boulton2013_dapagliflozin_C14DAP008.tsv  Boulton2013_dapagliflozin_DAP10.tsv  Boulton2013_saxagliptin_C14SAX004.tsv  Boulton2013_saxagliptin_SAX5.tsv
simulations/Cho2021/: Cho2021.html  Cho2021.json  Cho2021_dapagliflozin_DAP10.tsv  Cho2021_dapagliflozin_RC10.tsv
simulations/DapagliflozinParameterScan/: DapagliflozinParameterScan.html  DapagliflozinParameterScan.json
simulations/DoseDependencyExperiment/: DoseDependencyExperiment.html  DoseDependencyExperiment.json
simulations/FDAMB102002/: FDAMB102002.html  FDAMB102002.json  FDAMB102002_dapagliflozin_MAD10.tsv  FDAMB102002_dapagliflozin_MAD100.tsv  FDAMB102002_dapagliflozin_MAD2.5.tsv  FDAMB102002_dapagliflozin_MAD20.tsv  FDAMB102002_dapagliflozin_MAD50.tsv  FDAMB102002_uge_MAD0.tsv  FDAMB102002_uge_MAD10.tsv  FDAMB102002_uge_MAD100.tsv  FDAMB102002_uge_MAD2.5.tsv  FDAMB102002_uge_MAD20.tsv  FDAMB102002_uge_MAD50.tsv
simulations/FDAMB102003/: FDAMB102003.html  FDAMB102003.json  FDAMB102003_dapagliflozin_MAD100.tsv  FDAMB102003_dapagliflozin_MAD25.tsv  FDAMB102003_dapagliflozin_MAD5.tsv  FDAMB102003_dapagliflozin_recovery_MAD100.tsv  FDAMB102003_dapagliflozin_recovery_MAD25.tsv  FDAMB102003_dapagliflozin_recovery_MAD5.tsv  FDAMB102003_dapagliflozin_urine_MAD100.tsv  FDAMB102003_dapagliflozin_urine_MAD25.tsv  FDAMB102003_dapagliflozin_urine_MAD5.tsv  FDAMB102003_uge_MAD0.tsv  FDAMB102003_uge_MAD100.tsv  FDAMB102003_uge_MAD25.tsv  FDAMB102003_uge_MAD5.tsv
simulations/FDAMB102006/: FDAMB102006.html  FDAMB102006.json  FDAMB102006_dapagliflozin 3-o-glucuronide_urine.tsv  FDAMB102006_dapagliflozin_feces.tsv  FDAMB102006_dapagliflozin_urine.tsv  FDAMB102006_recovery_dapagliflozin 3-o-glucuronide_urine.tsv  FDAMB102006_recovery_dapagliflozin_feces.tsv  FDAMB102006_recovery_dapagliflozin_urine.tsv  FDAMB102006_recovery_total dapagliflozin_feces.tsv  FDAMB102006_recovery_total dapagliflozin_feces_urine.tsv  FDAMB102006_recovery_total dapagliflozin_urine.tsv  FDAMB102006_total dapagliflozin_feces.tsv  FDAMB102006_total dapagliflozin_feces_urine.tsv  FDAMB102006_total dapagliflozin_urine.tsv
simulations/FDAMB102007/: FDAMB102007.html  FDAMB102007.json  FDAMB102007_dapagliflozin 3-o-glucuronide_cumulative amount_DAP50_healthy.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_cumulative amount_DAP50_mild.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_cumulative amount_DAP50_moderate.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_cumulative amount_DAP50_normal.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_cumulative amount_DAP50_severe.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_recovery_DAP50_healthy.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_recovery_DAP50_mild.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_recovery_DAP50_moderate.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_recovery_DAP50_normal.tsv  FDAMB102007_dapagliflozin 3-o-glucuronide_recovery_DAP50_severe.tsv  FDAMB102007_dapagliflozin_cumulative amount_DAP50_healthy.tsv  FDAMB102007_dapagliflozin_cumulative amount_DAP50_mild.tsv  FDAMB102007_dapagliflozin_cumulative amount_DAP50_moderate.tsv  FDAMB102007_dapagliflozin_cumulative amount_DAP50_normal.tsv  FDAMB102007_dapagliflozin_cumulative amount_DAP50_severe.tsv  FDAMB102007_dapagliflozin_recovery_DAP50_healthy.tsv  FDAMB102007_uge_DAP20_mild.tsv  (+7 more)
(+540 files in other folders)
